fix(test): clean up imports, use Collections.emptyMap and static matchers (#359)